--- a/vercel.json
+++ b/vercel.json
@@ -6,5 +6,10 @@
       "use": "@now/node"
     }
   ],
-  "routes": [{ "src": "/(.*)", "dest": "/" }]
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "main.js"
+    }
+  ]
 }
